<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="20pt"
            android:layout_margin="20dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/location_code_title"
                android:textSize="6pt"
                android:typeface="serif" />

            <EditText
                android:id="@+id/locationCode"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dip"
                android:ems="10"
                android:inputType="text" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dip" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/entrytype_title"
                android:typeface="serif" />

            <Spinner
                android:id="@+id/entryType"
                android:layout_width="fill_parent"
                android:layout_height="20pt"
                android:layout_weight="1"
                android:entries="@array/entrytypelist" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/scan"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/scan_button_title"
                android:typeface="serif" />

            <Button
                android:id="@+id/quit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quit_button_title"
                android:typeface="serif" />
        </TableRow>
    </TableLayout>

</ScrollView>